@@ -80,6 +80,7 @@ mm_TESTS = \
   contrib/mm/tests/PH-PF-OH-OF-EH-EF-work.sh \
   contrib/mm/tests/VL-accommodates-overlong-mark.sh \
   contrib/mm/tests/date-localization-works.sh \
+  contrib/mm/tests/footnote-area-layout-is-correct.sh \
   contrib/mm/tests/flush-long-displays-at-end-of-input.sh \
   contrib/mm/tests/indexing-works.sh \
   contrib/mm/tests/letter-with-bottom-block-works.sh \
@@ -91,7 +92,8 @@ mm_TESTS = \
   contrib/mm/tests/nP-works.sh \
   contrib/mm/tests/place-equation-labels-correctly-in-displays.sh \
   contrib/mm/tests/remove-stale-bib-entry-data.sh \
-  contrib/mm/tests/short-pages-do-not-overflow-stack.sh
+  contrib/mm/tests/short-pages-do-not-overflow-stack.sh \
+  contrib/mm/tests/vertical-margins-are-correct.sh
 TESTS += $(mm_TESTS)
 EXTRA_DIST += \
   $(mm_TESTS) \
